# fast-flights-mcp

./: .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  check_fast_flights.py  flight_processing.py  index.js  package.json  pyproject.toml
.cursor/rules/: development-workflow.mdc
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: examples.md
src/fast_flights_mcp/: __init__.py  flights.py  server.py
tests/: test_bulk.py  test_fast_flights_internet.py  test_npm_install.py  test_real_integration.py  test_server.py  test_server_extra.py
